# EpistasisStudy

BEAM3/: BEAMconfig.sh  BEAMformat.sh  BEAMstack.sh  chi.results12.txt  tal.txt  tmpout.txt  toydata.txt
BOOST/: BOOSTconfig.sh  BOOSTformat.sh  BOOSTfresults.sh  BOOSTmstack.sh
Ensemble/: .~lock.Ensemble.ods#  Ensembleconfig.sh  Ensembleepistasis.sh  Ensembleformat.sh  Ensemblefresults.sh  Ensemblemaineffect.sh  Ensemblerun.sh  Ensemblestack.sh  Ensembletstack.sh
Ensemble Results/: tableresults.csv  tabletresults.csv
MBMDR/: MBMDRconfig.sh  MBMDRformat.sh  MBMDRfresults.sh  MBMDRmove.sh  MBMDRrun.sh  MBMDRstack.sh  mbmdrscript.R  mysavefile.csv  results.txt
SNPHarvester/: BasicAlg.java  CombinationGenerator.java  Readme.txt  SNPHarvester.java  SNPHarvesterconfig.sh  SNPHarvesterformat.sh  SNPHarvesterfresults.sh  SNPHarvesterrun.sh
SNPRuler/: Rscript.R  SNPRulerconfig.sh  SNPRulerformat.sh  SNPRulerfresults.sh  ruledata2.txt
SnC/: SnCconfig.sh  SnCformat.sh  SnCfresults.sh  SnCmstack.sh  SnCrun.sh  SnCscript.R  SnCstack.sh  SnCsumstack.sh  datasets.1750.1.1-3GE-1PE-caco2000.mdr  datasets.1750.1.1-3GE-1PE-caco2000.mdr.genotype.csv  pheno.csv  pheno.txt  (+7 more)
TEAM/TEAM/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  collection.txt  collector.cpp  collector_all.cpp  get_args.cpp  get_snps.cpp  global_headers.hpp  global_param.hpp  hist.cpp  mst.cpp  mst.hpp  out.txt  parallel.cpp  pvalue.cpp  pvaluedist.cpp  read_data.cpp  test.cpp  test_all.chi.cpp  test_all.cpp  test_all.gtest.cpp  test_all_and_pvalue.cpp  test_origin.cpp  test_scores.cpp
(+102 files in other folders)
